# AutonomousDoorOpening

./: CMakeLists.txt  package.xml  setup.py
action/: TestMsg.action
msg/: CameraCalibrationMsg.msg
src/jp_exjobb/: aruco_detection.py  realsense_publisher.py
src/jp_exjobb/actuation/: actuation_evaluation.py  actuation_skill.py  button_pressing.py  force_sensing.py  gripper.py  jp_arm_home.py  switch_controller.py
src/jp_exjobb/aruco_detection/: aruco_detection.py  aruco_evaluation.py  build_skill.py  determine_map_transformation.py  object_pose_skill.py
src/jp_exjobb/camera_calibration/: camera_calibration_server.py  camera_calibration_skill.py  fake_publisher.py  inherent_camera_calibration.py
src/jp_exjobb/camera_calibration/check/: params
src/jp_exjobb/compound/: button_pressing.py  go_through_door.py  move_and_detect.py  navigation_planner.py
src/jp_exjobb/compound/door_operating_mechanism/: button_pressing.py  detect_door_opening_mechanism.py  operate_handle.py
src/jp_exjobb/compound/door_transition/: jp_pass_door.py  (+1 more)
src/jp_exjobb/evaluation/: aruco_evaluation.py  button_press_evaluation.py  go_through_door_evaluation.py  navigation_evaluation.py
src/jp_exjobb/example_skills/: action_skill.py  arm_movement.py  drive.py  navigation_skill.py  non_blocking_skill.py  nonblocking_skill.py  prill_skill.py
src/jp_exjobb/hand_eye_calibration/: compute_hand_eye_calibration.py  extrinsic_camera_calibration.py  find_marker.py  hand_eye_calibration.py  loop_test.py  move_arm_on_sphere.py  pose_generator.py  reset_hand_eye_calibration.py  save_calib_data.py  save_hand_eye_calibration.py  save_hand_eye_calibration_poses.py  start_hand_eye_calibration.py
src/jp_exjobb/helper_skills/: fail_skill.py  save_gripper_pose.py  select_string.py  simulation_camera.py  success_skill.py  timer_skill.py  transform_pose.py
src/jp_exjobb/manipulation/: compliant_arm_movement.py  joint_arm_movement.py  jp_arm_home.py
src/jp_exjobb/navigation/: navigation_evaluation  navigation_evaluation.py  navigation_skill.py  room_navigation.py
src/jp_exjobb/perception/: aruco_detection.py  aruco_evaluation.py  calibration.py  camera_calibration.py  door_detection.py  force_sensing.py  modified_aruco_detection.py  pose_estimation.py  wait_for_velocity.py  watch_for_door..py  watch_for_door.py  wrench_smoothing.py
src/jp_exjobb/ros_examples/: action_counter.py  clean_turtle.py  extract_parameters.py  heron.turtle  lidar_signal.py  message_frequency.py  prill_skill.py  read_lidar.py  realsense_publisher.py  standard_input.py  test.py  wrench_signal.py
src/ros_test_pkg/: calibrate.py  realsense_publisher.py
(+5 files in other folders)
