<?xml version="1.0"?>
<package>
  <name>jp_exjobb</name>
  <version>0.0.1</version>
  <description>Thesis by Pontus and Josefin</description>

  <maintainer email="pontus.rosqvist@gmail.com">Author</maintainer>
  <license>BSD</license>
  <author email="pontus.rosqvist@gmail.com">Author</author>
  <author>Pontus and Josefin</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>skiros2_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>skiros2_msgs</run_depend>
  <run_depend>skiros2_common</run_depend>
  <run_depend>skiros2_skill</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
</package>
